--- a/templates/Admin/user/new.html.twig
+++ b/templates/Admin/user/new.html.twig
@@ -19,11 +19,24 @@
                         {{ form_errors(formUser.username) }}
                     </div>
                     <div class="form-group col-md-4">
+                        <label>Nombre:</label>
+                        {{ form_widget(formUser.name,{ 'attr': {'class': 'form-control','placeholder':'Nombre' } }) }}
+                        {{ form_errors(formUser.name) }}
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label>Apellidos:</label>
+                        {{ form_widget(formUser.lastname,{ 'attr': {'class': 'form-control','placeholder':'Apellidos' } }) }}
+                        {{ form_errors(formUser.lastname) }}
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="form-group col-md-6">
                         <label>Contraseña:</label>
                         {{ form_widget(formUser.password,{ 'attr': {'class': 'form-control passUser','placeholder':'Contraseña','type':'password' } }) }}
                         {{ form_errors(formUser.password) }}
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-6">
                         <label>Repita contraseña:</label>
                         <input class="form-control" type="password" id="rememberPass" placeholder="Repita contraseña">
                     </div>
