--- a/templates/Admin/user/new.html.twig
+++ b/templates/Admin/user/new.html.twig
@@ -63,15 +63,24 @@
                                 {% endfor %}
                             </select>
                         </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-12">
+                        <label>Información adicional:</label>
+                        {{ form_widget(formUser.information,{ 'attr': {'class': 'form-control','placeholder':'...' } }) }}
+                        {{ form_errors(formUser.information) }}
+                    </div>
+                </div>
+                <div class="row mt-2 text-center">
+                    <div class="col-md-12">
+                        <div id="info-user"></div>
                         <button class="btn btn-dark" type="submit" id="btn-save-user" disabled>Guardar</button>
                     </div>
-                    <div id="info-user"></div>
-
-
                 </div>
+
                 {{ form_end(formUser) }}
-
-
             {% endif %}
         </div>
     </section>
