--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -10,29 +10,39 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6"><h1>Nueva tarea</h1></div>
-                <div class="col-md-6"><a style="float: right" href="{{ path('admin.task') }}" class="nav-item nav-link"><b>Listado de Tareas</b></a></div>
+                <div class="col-md-6"><a style="float: right" href="{{ path('admin.task') }}" class="nav-item nav-link"><b>Listado
+                            de Tareas</b></a></div>
             </div>
 
             <scan style="color:red;">{{ infoTask }}</scan>
             {% if is_granted('IS_AUTHENTICATED_REMEMBERED') and infoTask is null %}
                 {{ form_start(formTask,{ 'attr': {'enctype': 'multipart/form-data'},'name':'newAdvancedTask'}) }}
                 <div class="row">
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
                         <label>Título:</label>
                         {{ form_widget(formTask.title,{ 'attr': {'class': 'form-control','placeholder':'titulo' } }) }}
                         {{ form_errors(formTask.title) }}
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
                         <label>Servicio:</label>
                         <select name="service" class="form-select">
                             <option value="" selected>Sin especificar</option>
                             {% for service in services %}
-                                <option value="{{ service.id }}" >{{ service.name|e }}</option>
+                                <option value="{{ service.id }}">{{ service.name|e }}</option>
                             {% endfor %}
                         </select>
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-3">
+                        <label>Tipo:</label>
+                        <select name="type-task" class="form-select">
+                            <option value="0">Individual</option>
+                            <option value="1">Grupo</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-3">
                         <label id="label-operator">Operador:</label>
+                        <div id="operators-task">
+                        </div>
                         <select name="operator" class="form-select">
                             {% for user in operators %}
                                 <option value="{{ user.id }}">{{ user.username|e }}</option>
@@ -40,6 +50,7 @@
                         </select>
                     </div>
                 </div>
+                <br>
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label>Descripción de la tarea:</label>
@@ -52,9 +63,18 @@
                         {{ form_errors(formTask.material) }}
                     </div>
                 </div>
-                <div id="info-task"></div>
-                <div class="form-group col-md-1 mt-2">
-                    <button class="btn btn-dark" type="submit">Hecho</button>
+                <br>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <label>Estado:</label>
+                        {{ form_widget(formTask.state,{ 'attr': {'class': 'form-select','placeholder':'Estado de la tarea' } }) }}
+                        {{ form_errors(formTask.state) }}
+                    </div>
+
+                    <div class="form-group col-md-6 mt-4">
+                        <div id="info-task"></div>
+                        <button class="btn btn-dark" type="submit">Crear</button>
+                    </div>
                 </div>
                 {{ form_end(formTask) }}
             {% endif %}
