--- a/templates/Admin/user/show.html.twig
+++ b/templates/Admin/user/show.html.twig
@@ -41,7 +41,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <label> <b>Información del usuario {{ user.name }} {{ user.lastname }} :</b></label>
+                <label> <b>Información sobre {{ user.name }} {{ user.lastname }} :</b></label>
                 <p style="color:blue">{{ user.information }}</p>
             </div>
         </div>
@@ -55,11 +55,39 @@
                 <ul>
                     {% for task in taskUser %}
                         <li style="list-style: none">
-                            <h6>{{ task.title|upper }}</h6>
+                            <h6>{{ task.title|upper }}  <a href="" style="color:gray;float: right;font-size: 1.8em"><i class="bi bi-gear"></i></a></h6>
+                            <div style="float: right">
+
+                                <b>Vista:
+                                    {% if task.viewOperator ==0 %}
+                                        <span style="color:red">No</span>
+                                    {% else %}
+                                        <span style="color:green">Si</span>
+                                    {% endif %}
+                                </b>
+                                <br>
+                                <b>Estado: {% if task.state == 0 %}
+                                        <span style="color: red">Pendiente</span>
+                                    {% elseif  task.state == 1 %}
+                                        <span style="color: orange">En proceso</span>
+                                    {% elseif task.state == 2 %}
+                                        <span style="color: blue">Realizado</span>
+                                    {% else %}
+                                        <span style="color:green">Verificado</span>
+                                    {% endif %}
+                                </b>
+                            </div>
+                            <b>Servicio:</b> <span>
+                                    {% if task.service %}
+                                        {{ task.service.name }}
+                                    {% else %}
+                                        Sin especificar
+                                    {% endif %}
+                                </span>
                             <p><b>Descripción: </b><i style="color:blue"> {{ task.description }}</i></p>
                             <p><b>Material: </b><i style="color:blue"> {{ task.material }}</i></p>
-
                         </li>
+                        <hr>
                     {% endfor %}
                 </ul>
             </div>
@@ -76,18 +104,23 @@
                 {{ form_start(formTask,{ 'attr': {'enctype': 'multipart/form-data'},'name':'newTask'}) }}
                 <div class="row">
                     <input name="user" type="hidden" value="{{ user.id }}">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
                         <label>Título:</label>
                         {{ form_widget(formTask.title,{ 'attr': {'class': 'form-control','placeholder':'titulo' } }) }}
                         {{ form_errors(formTask.title) }}
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
                         <label>Servicio:</label>
                         <select name="service" class="form-select">
                             {% for service in services %}
                                 <option value="{{ service.id }}">{{ service.name|e }}</option>
                             {% endfor %}
                         </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label>Estado:</label>
+                        {{ form_widget(formTask.state,{ 'attr': {'class': 'form-select','placeholder':'titulo' } }) }}
+                        {{ form_errors(formTask.state) }}
                     </div>
                 </div>
                 <div class="row">
@@ -108,6 +141,7 @@
                 </div>
                 {{ form_end(formTask) }}
             </div>
+            <br>
         {% endif %}
 
     </div>
