--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,7 +99,7 @@
     padding-top: 100px;
 }
 
-.login-user-front, #new-user,#front-show-user,#new-service,.image-home-admin,.user-admin-index,.task-admin-index,#new-multi-task{
+.login-user-front, #new-user,#front-show-user,#new-service,.image-home-admin,.user-admin-index,.task-admin-index,#new-multi-task,#new-company{
     padding-top: 100px;
     width: 90%;
     margin: auto;
