--- a/templates/Admin/company/index.html.twig
+++ b/templates/Admin/company/index.html.twig
@@ -14,7 +14,7 @@
                        class="nav-item nav-link"><b><i class="bi bi-plus-lg"></i><i class="bi bi-building"></i></b></a>
                 </h1>
 
-                <p id="info-admin"></p>
+                <p id="info-admin-company"></p>
                 {% for message in app.flashes('warning') %}
                 <div class="alert alert-warning">
                     {{ message }}
@@ -23,6 +23,25 @@
                 <div  id="admin-company" class="table-bordered table-responsive">Loading...</div>
                 <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
             {% endif %}
+            <script>
+                $(function () {
+                    $('#admin-company').initDataTables({{ datatable_settings(datatable) }}
+                        , {
+                            searching: true,
+                            dom: '<"html5buttons"B>lTfgitp',
+                            buttons: [
+                                'copy',
+                                {extend: 'pdf', title: 'domains'},
+                                {extend: 'print'}
+                            ]
+                        }).then(function (dt) {
+                        // dt contains the initialized instance of DataTables
+                        dt.on('draw',
+                            function () {
+                            })
+                    });
+                });
+            </script>
         </div>
     </section>
 {% endblock %}
