fix:change for view in company list

--- a/templates/Admin/company/new.html.twig
+++ b/templates/Admin/company/new.html.twig
@@ -11,7 +11,7 @@
                 {{ form_start(formCompany,{ 'attr': {'enctype': 'multipart/form-data' } }) }}
                 <div class="row">
                     <div class="col-md-6"><h1>Nueva Empresa</h1></div>
-                    <div class="col-md-6"><a style="float: right" href="{{ path('admin.task') }}"
+                    <div class="col-md-6"><a style="float: right" href="{{ path('admin.company') }}"
                                              class="nav-item nav-link"><b>Listado
                                 de Empresas</b></a></div>
                 </div>
