fix : responsive adaptation

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -22,6 +22,12 @@
         text-align:center ;
     }
 
+    .email-company,.address-company,.email-user,.material-task,.description-task{
+        display: none;
+    }
+
+
+
 }
 
 
