--- a/templates/Admin/task/new.html.twig
+++ b/templates/Admin/task/new.html.twig
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <br>
-                <div class="row">
+                <div class="row mb-4">
                     <div class="form-group col-md-6">
                         <label>Estado:</label>
                         {{ form_widget(formTask.state,{ 'attr': {'class': 'form-select','placeholder':'Estado de la tarea' } }) }}
