--- a/templates/Admin/user/new.html.twig
+++ b/templates/Admin/user/new.html.twig
@@ -80,14 +80,14 @@
                     </div>
                 </div>
                 <br>
-                <div class="row">
+                <div class="row ">
                     <div class="col-md-12">
                         <label>Información adicional:</label>
                         {{ form_widget(formUser.information,{ 'attr': {'class': 'form-control','placeholder':'...' } }) }}
                         {{ form_errors(formUser.information) }}
                     </div>
                 </div>
-                <div class="row mt-2 text-center">
+                <div class="row mt-2 text-center mb-4">
                     <div class="col-md-12">
                         <div id="info-user"></div>
                         <button class="btn btn-dark" type="submit" id="btn-save-user" disabled>Guardar</button>
