--- a/templates/Front/default/index.html.twig
+++ b/templates/Front/default/index.html.twig
@@ -3,10 +3,13 @@
 {% block title %}Home{% endblock %}
 {% block body %}
     {% block nav %}
+
         {{ parent() }}
 
     {% endblock %}
     <div class="container img-responsive image-home-admin hidden-md">
-        <img  class="img-fluid" src="https://comunidades.cepal.org/elac/sites/elac/files/styles/640x320/public/group-images/Transformaci%C3%B3n%20digital%20y%20econom%C3%ADa%20digital_0.jpg?h=2a647c80&itok=NQZYH16l"  alt="CoolBrand">
+        <img class="img-fluid"
+             src="https://comunidades.cepal.org/elac/sites/elac/files/styles/640x320/public/group-images/Transformaci%C3%B3n%20digital%20y%20econom%C3%ADa%20digital_0.jpg?h=2a647c80&itok=NQZYH16l"
+             alt="CoolBrand">
     </div>
 {% endblock %}
