--- a/templates/Admin/task/index.html.twig
+++ b/templates/Admin/task/index.html.twig
@@ -8,11 +8,13 @@
     {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
         <div class="container task-admin-index">
             <h1>Tareas
-                <a style="color: #1d2124;float: right" href="{{ path('new.multi.task') }}"
-                   class="nav-item nav-link"><b><i class="bi bi-file-earmark-plus-fill"></i></b></a>
+                {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
+                    <a style="color: #1d2124;float: right" href="{{ path('new.multi.task') }}"
+                       class="nav-item nav-link"><b><i class="bi bi-file-earmark-plus-fill"></i></b></a>
+                {% endif %}
             </h1>
             <p id="info-admin-task"></p>
-            <div  id="admin-task" class="table-responsive table-bordered">Loading...</div>
+            <div id="admin-task" class="table-responsive table-bordered">Loading...</div>
             <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
             <script>
                 $(function () {
@@ -29,7 +31,7 @@
                         // dt contains the initialized instance of DataTables
                         dt.on('draw',
                             function () {
-                        })
+                            })
                     });
                 });
             </script>
